# png2ico

./: .gitignore  CMakeLists.txt  LICENSE  README.md
rescources/: idea.md
src/: api.cpp  api.hpp  main.cpp
